--- a/angularHTMLayout/coffee/homePage_column.ng.html
+++ b/angularHTMLayout/coffee/homePage_column.ng.html
@@ -34,6 +34,7 @@
     class="tab-link tab-{{display.Id}}"
     ng-click="selectDisplay(col,idisp)"
     data-id="{{display.Id}}"
+    ng-init="initDisplay(display)"
   >
     {{display.label}}
   </div>
