--- a/angularHTMLayout/coffee/homePage_column.ng.html
+++ b/angularHTMLayout/coffee/homePage_column.ng.html
@@ -121,7 +121,7 @@
         <option ng-if="!isGridLayout" value="favorite">{{$root.i18n('favorite')}}</option>
         <option ng-if="!isGridLayout" value="quicklink">{{$root.i18n('quicklink')}}</option>
         <option value="evolve_view">{{$root.i18n('indexPage')}}</option>
-        <option ng-if="cwApi.isSinglePageType()" value="object_view">{{$root.i18n('objectPage')}}</option>
+        <option value="object_view">{{$root.i18n('objectPage')}}</option>
         <option value="cw_user_view">{{$root.i18n('cw_user_view')}}</option>
         <option value="object_description">{{$root.i18n('object_description')}}</option>
         <option value="last_modified_object">{{$root.i18n('last_modified_object')}}</option>
