--- a/angularHTMLayout/coffee/cwWorkflow_stepsSettings.ng.html
+++ b/angularHTMLayout/coffee/cwWorkflow_stepsSettings.ng.html
@@ -31,6 +31,10 @@
   <div class="row-cell row-cell-value"><input type="checkbox" ng-model="stepSetting.readOnly" /></div>
 </div>
 <div class="bootstrap-iso rowFlex">
+  <div class="row-cell row-cell-label">{{$root.i18n('hidden')}} :&nbsp;</div>
+  <div class="row-cell row-cell-value"><input type="checkbox" ng-model="stepSetting.hidden" /></div>
+</div>
+<div class="bootstrap-iso rowFlex">
   <div class="row-cell row-cell-label">{{$root.i18n('mandatory')}} :&nbsp;</div>
   <div class="row-cell row-cell-value"><input type="checkbox" ng-model="stepSetting.mandatory" /></div>
 </div>
