--- a/angularHTMLayout/coffee/cwBackup.ng.html
+++ b/angularHTMLayout/coffee/cwBackup.ng.html
@@ -1,11 +1,16 @@
 <div>
+  <div ng-if="saveButton" class="saveButton">
+    <a class="btn-add-operation btn page-action no-text" title="{{$root.i18n('save')}}" ng-click="save()">
+      <i ng-click="save()" class="fa fa-save" aria-hidden="true"></i
+    ></a>
+  </div>
   <div ng-if="showDescription" class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-value row-cell-max-width">
-      <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/duplicationButton_description.ng.html'"></div>
+      <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/cwBackup_description.ng.html'"></div>
     </div>
   </div>
   <div class="row bootstrap-iso">
-    <div class="row-cell row-cell-label labelTitle">{{$root.i18n('view_to_activate_duplicate_button')}} :</div>
+    <div class="row-cell row-cell-label labelTitle">{{$root.i18n('cwbackup_objecttypetodisplay')}} :</div>
   </div>
   <div class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-value row-cell-max-width">
@@ -23,17 +28,22 @@
   </div>
 
   <div class="rowFlex bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('duplicate_button_view_to_configure')}} :&nbsp;</div>
+    <div class="row-cell row-cell-label">{{$root.i18n('cwbackup_configureobjectype')}} :&nbsp;</div>
     <div class="row-cell row-cell-value">
-      <select ng-model="otSelected">
-        <option ng-if="ng.config.ots.hasOwnProperty(ot.scriptName)" value="{{ot.scriptName}}" ng-repeat="ot in OTs track by ot.scriptName">
+      <select ng-change="getAssociationTargetObjectType(otSelected)" ng-model="otSelected">
+        <option
+          ng-selected="otSelected === ot.scriptName"
+          ng-if="ng.config.ots.hasOwnProperty(ot.scriptName)"
+          value="{{ot.scriptName}}"
+          ng-repeat="ot in OTs track by ot.scriptName"
+        >
           {{ot.name}} ({{ot.scriptName}})
         </option>
       </select>
     </div>
   </div>
   <div class="row bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('duplicate_button_property_to_exclude')}} :</div>
+    <div class="row-cell row-cell-label">{{$root.i18n('cwbackup_propertytoexclude')}} :</div>
   </div>
   <div class="row bootstrap-iso">
     <div class="row-cell row-cell-value row-cell-max-width">
@@ -50,17 +60,17 @@
     </div>
   </div>
   <div class="row bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('duplicate_button_association_to_exclude')}} :</div>
+    <div class="row-cell row-cell-label">{{$root.i18n('cwbackup_associationtoexclude')}} :</div>
   </div>
   <div class="row bootstrap-iso">
     <div class="row-cell row-cell-value row-cell-max-width">
       <div class="cell-content-wrapper filter-wrapper propertieslist">
-        <div class="choiceBox" ng-repeat="a in metamodel.objectTypes[otSelected].AssociationTypes | orderBy:'DisplayName'">
+        <div class="choiceBox" ng-repeat="a in associationTargetOT">
           <a
             class="btn-add-filter btn page-action"
-            ng-class="ng.config[otSelected].associationScriptNameToExclude.indexOf(a.ScriptName.toLowerCase()) !== -1? ['selected'] : []"
-            ng-click="toggleArray(ng.config[otSelected].associationScriptNameToExclude,a.ScriptName.toLowerCase())"
-            >{{a.DisplayName}}</a
+            ng-class="ng.config[otSelected].associationScriptNameToExclude.indexOf(a.scriptname) !== -1? ['selected'] : []"
+            ng-click="toggleArray(ng.config[otSelected].associationScriptNameToExclude,a.scriptname)"
+            >{{a.name}}</a
           >
         </div>
       </div>
