--- a/angularHTMLayout/coffee/cwBackup.ng.html
+++ b/angularHTMLayout/coffee/cwBackup.ng.html
@@ -1,7 +1,7 @@
 <div>
   <div ng-if="saveButton" class="saveButton">
     <a class="btn-add-operation btn page-action no-text" title="{{$root.i18n('save')}}" ng-click="save()">
-      <i ng-click="save()" class="fa fa-save" aria-hidden="true"></i
+      <i class="fa fa-save" aria-hidden="true"></i
     ></a>
   </div>
   <div ng-if="showDescription" class="rowFlex bootstrap-iso">
