fix type property value comparison

--- a/angularHTMLayout/cwLayoutBackup/compareTable.ng.html
+++ b/angularHTMLayout/cwLayoutBackup/compareTable.ng.html
@@ -20,7 +20,7 @@
       <td class="same"><span ng-bind-html="getPropertyValue(ng.backup,OT,vv.id,'TYPE')"> </span></td>
       <td
         ng-switch-when="true"
-        ng-class="getPropertyValue(ng.current,OT,vv.id,'TYPE') != getPropertyValue(ng.backup,OT,vv.id,'TYPE') ? 'different' : 'same'"
+        ng-class="getPropertyValue(ng.current,OT,vv.id,'TYPE',true) != getPropertyValue(ng.backup,OT,vv.id,'TYPE',true) ? 'different' : 'same'"
       >
         <span ng-bind-html="getPropertyValue(ng.backup,OT,vv.id,'TYPE')"> </span>
       </td>
