--- a/angularHTMLayout/homePage/home.ng.html
+++ b/angularHTMLayout/homePage/home.ng.html
@@ -1,4 +1,5 @@
 <div class="homePage_main">
+
   <div ng-if="checkIfRole(col)" ng-repeat="(icol, col) in config.columns | orderBy:'order'" ng-style="getStyleForColumn(col)" class="homePage_column">
     <div
       ng-if="checkIfRole(display)"
@@ -9,6 +10,7 @@
       id="{{display.uuid}}"
       ng-class="{nextGenCard: nextGenTheme, displayTransparent: display.transparent ,fixWidth:display.fixWidth}"
     >
+
       <div ng-if="display.extendable" class="cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
         <span ng-click="display.extended = !display.extended" ng-if="!display.rightExpandButton">
           <i ng-if="display.extended === false" class="fa fa-angle-right"></i>
@@ -16,7 +18,10 @@
         </span>
         <span ng-click="display.extended = !display.extended" class="homePage_display_title">
           <span ng-if="!display.objectLabel">{{display.label}}</span>
-          <span ng-if="display.objectLabel">{{display.label}} : {{display.objectLabel}}</span>
+          <span ng-if="display.objectLabel">{{display.label}}
+            <a href="{{display.objectLink}}" target="_blank">{{display.objectLabel}}</a>
+          </span>
+          <span ng-if="display.loading"><i class='loadingDisplay fa fa-circle-o-notch fa-spin'> </i></span>
         </span>
         <span ng-if="keys(display.sortProperties).length > 0" class="display_sortProperty">
           <span>{{$root.i18n('sortBy')}}</span>
@@ -33,6 +38,7 @@
           <i ng-if="display.extended === true" class="fa fa-caret-square-o-down expendIcon"></i>
         </span>
       </div>
+      <div ng-if="!display.extendable && display.loading" ><span><i class='loadingDisplay fa fa-circle-o-notch fa-spin'> </i></span></div> 
       <div
         ng-style="getStyleForDisplayContent(display)"
         class="homePage_display_content"
