complexe table, fix issue with export when it's in display

--- a/angularHTMLayout/homePage/home.ng.html
+++ b/angularHTMLayout/homePage/home.ng.html
@@ -1,5 +1,4 @@
 <div class="homePage_main">
-
   <div ng-if="checkIfRole(col)" ng-repeat="(icol, col) in config.columns | orderBy:'order'" ng-style="getStyleForColumn(col)" class="homePage_column">
     <div
       ng-if="checkIfRole(display)"
@@ -9,8 +8,10 @@
       class="homePage_display {{display.label}}"
       id="{{display.uuid}}"
       ng-class="{nextGenCard: nextGenTheme, displayTransparent: display.transparent ,fixWidth:display.fixWidth}"
+      data-type="{{display.type}}"
+      data-object_id="{{display.objectId}}"
+      data-view="{{display.view}}"
     >
-
       <div ng-if="display.extendable" class="cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
         <span ng-click="display.extended = !display.extended" ng-if="!display.rightExpandButton">
           <i ng-if="display.extended === false" class="fa fa-angle-right"></i>
@@ -18,10 +19,11 @@
         </span>
         <span ng-click="display.extended = !display.extended" class="homePage_display_title">
           <span ng-if="!display.objectLabel">{{display.label}}</span>
-          <span ng-if="display.objectLabel">{{display.label}}
+          <span ng-if="display.objectLabel"
+            >{{display.label}}
             <a href="{{display.objectLink}}" target="_blank">{{display.objectLabel}}</a>
           </span>
-          <span ng-if="display.loading"><i class='loadingDisplay fa fa-circle-o-notch fa-spin'> </i></span>
+          <span ng-if="display.loading"><i class="loadingDisplay fa fa-circle-o-notch fa-spin"> </i></span>
         </span>
         <span ng-if="keys(display.sortProperties).length > 0" class="display_sortProperty">
           <span>{{$root.i18n('sortBy')}}</span>
@@ -38,7 +40,9 @@
           <i ng-if="display.extended === true" class="fa fa-caret-square-o-down expendIcon"></i>
         </span>
       </div>
-      <div ng-if="!display.extendable && display.loading" ><span><i class='loadingDisplay fa fa-circle-o-notch fa-spin'> </i></span></div> 
+      <div ng-if="!display.extendable && display.loading">
+        <span><i class="loadingDisplay fa fa-circle-o-notch fa-spin"> </i></span>
+      </div>
       <div
         ng-style="getStyleForDisplayContent(display)"
         class="homePage_display_content"
