--- a/angularHTMLayout/coffee/cwBackup.ng.html
+++ b/angularHTMLayout/coffee/cwBackup.ng.html
@@ -10,71 +10,147 @@
     </div>
   </div>
   <div class="row bootstrap-iso">
-    <div class="row-cell row-cell-label labelTitle">{{$root.i18n('cwbackup_objecttypetodisplay')}} :</div>
+    <div class="row-cell row-cell-label labelTitle">{{$root.i18n('cwbackup_method')}} :</div>
+    <div class="row-cell row-cell-value">
+      <select ng-model="ng.config.method">
+        <option value="0">Default</option>
+        <option value="1">Advanced</option>
+      </select>
+      <div class="row-cell" ng-if="ng.config.method == 1">
+        <span
+          >Warning: this method, if not properly used, especially without filters, can result in large volumes of data which can make the page
+          dysfunctional and cause timeouts</span
+        >
+      </div>
+    </div>
   </div>
-  <div class="rowFlex bootstrap-iso">
-    <div class="row-cell row-cell-value row-cell-max-width">
-      <div class="cell-content-wrapper filter-wrapper propertieslist">
-        <div class="choiceBox" ng-repeat="o in OTs | orderBy:'name'">
-          <a
-            class="btn-add-filter btn page-action"
-            ng-class="ng.config.ots.hasOwnProperty(o.scriptName) ? ['selected'] : []"
-            ng-click="updateConfig(ng.config.ots,o.scriptName)"
-            >{{o.name}} ({{o.scriptName}})</a
+  <div class="row bootstrap-iso">
+    <div class="row-cell row-cell-label labelTitle">{{$root.i18n('cwbackup_level')}} :</div>
+    <div class="row-cell row-cell-value"><input type="number" ng-model="ng.config.level" /></div>
+  </div>
+
+  <div class="tabs">
+    <div ng-class="{active: !selectedDataDisplay}" class="tab-link" ng-click="selectedDataDisplay = false">
+      {{$root.i18n('cwbackup_frontend_filtering')}}
+    </div>
+    <div
+      ng-class="{active: selectedDataDisplay, 'cw-hidden':!(ng.config.level > 0 && ng.config.method == 1)}"
+      class="tab-link"
+      ng-click="selectedDataDisplay = true"
+    >
+      {{$root.i18n('cwbackup_data_filtering')}}
+    </div>
+  </div>
+  <div class="tabContent" ng-if="selectedDataDisplay == false">
+    <div class="row bootstrap-iso">
+      <div class="row-cell row-cell-label labelTitle">{{$root.i18n('cwbackup_objecttypetodisplay')}} :</div>
+    </div>
+    <div class="rowFlex bootstrap-iso">
+      <div class="row-cell row-cell-value row-cell-max-width">
+        <div class="cell-content-wrapper filter-wrapper propertieslist">
+          <div class="choiceBox" ng-repeat="o in OTs | orderBy:'name'">
+            <a
+              class="btn-add-filter btn page-action"
+              ng-class="ng.config.ots.hasOwnProperty(o.scriptName) ? ['selected'] : []"
+              ng-click="updateConfig(ng.config.ots,o.scriptName)"
+              >{{o.name}} ({{o.scriptName}})</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="rowFlex bootstrap-iso">
+      <div class="row-cell row-cell-label">{{$root.i18n('cwbackup_configureobjectype')}} :&nbsp;</div>
+      <div class="row-cell row-cell-value">
+        <select ng-change="getAssociationTargetObjectType(otSelected)" ng-model="otSelected">
+          <option
+            ng-selected="otSelected === ot.scriptName"
+            ng-if="ng.config.ots.hasOwnProperty(ot.scriptName)"
+            value="{{ot.scriptName}}"
+            ng-repeat="ot in OTs track by ot.scriptName"
           >
+            {{ot.name}} ({{ot.scriptName}})
+          </option>
+        </select>
+      </div>
+    </div>
+    <div class="row bootstrap-iso">
+      <div class="row-cell row-cell-label">{{$root.i18n('cwbackup_propertytoexclude')}} :</div>
+    </div>
+    <div class="row bootstrap-iso">
+      <div class="row-cell row-cell-value row-cell-max-width">
+        <div class="cell-content-wrapper filter-wrapper propertieslist">
+          <div class="choiceBox" ng-repeat="p in objectToArray(metamodel.objectTypes[otSelected].properties)  | orderBy:'name'">
+            <a
+              class="btn-add-filter btn page-action"
+              ng-class="ng.config[otSelected].propertyScriptNameToExclude.indexOf(p.scriptName) !== -1? ['selected'] : []"
+              ng-click="toggleArray(ng.config[otSelected].propertyScriptNameToExclude,p.scriptName)"
+              >{{p.name}}</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row bootstrap-iso">
+      <div class="row-cell row-cell-label">{{$root.i18n('cwbackup_associationtoexclude')}} :</div>
+    </div>
+    <div class="row bootstrap-iso">
+      <div class="row-cell row-cell-value row-cell-max-width">
+        <div class="cell-content-wrapper filter-wrapper propertieslist">
+          <div class="choiceBox" ng-repeat="a in associationTargetOT">
+            <a
+              class="btn-add-filter btn page-action"
+              ng-class="ng.config[otSelected].associationScriptNameToExclude.indexOf(a.scriptname) !== -1? ['selected'] : []"
+              ng-click="toggleArray(ng.config[otSelected].associationScriptNameToExclude,a.scriptname)"
+              >{{a.name}}</a
+            >
+          </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="rowFlex bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('cwbackup_configureobjectype')}} :&nbsp;</div>
-    <div class="row-cell row-cell-value">
-      <select ng-change="getAssociationTargetObjectType(otSelected)" ng-model="otSelected">
-        <option
-          ng-selected="otSelected === ot.scriptName"
-          ng-if="ng.config.ots.hasOwnProperty(ot.scriptName)"
-          value="{{ot.scriptName}}"
-          ng-repeat="ot in OTs track by ot.scriptName"
-        >
-          {{ot.name}} ({{ot.scriptName}})
-        </option>
-      </select>
+  <div class="tabContent" ng-if="selectedDataDisplay == true">
+    <div class="row bootstrap-iso">
+      <div class="row-cell row-cell-label labelTitle">{{$root.i18n('cwbackup_filter_level')}} :</div>
     </div>
-  </div>
-  <div class="row bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('cwbackup_propertytoexclude')}} :</div>
-  </div>
-  <div class="row bootstrap-iso">
-    <div class="row-cell row-cell-value row-cell-max-width">
-      <div class="cell-content-wrapper filter-wrapper propertieslist">
-        <div class="choiceBox" ng-repeat="p in objectToArray(metamodel.objectTypes[otSelected].properties)  | orderBy:'name'">
-          <a
-            class="btn-add-filter btn page-action"
-            ng-class="ng.config[otSelected].propertyScriptNameToExclude.indexOf(p.scriptName) !== -1? ['selected'] : []"
-            ng-click="toggleArray(ng.config[otSelected].propertyScriptNameToExclude,p.scriptName)"
-            >{{p.name}}</a
-          >
+
+    <div class="tabs">
+      <div
+        ng-repeat="i in getLevelArray()"
+        ng-class="{active: i == ng.selectedDataFilterLevel}"
+        class="tab-link"
+        ng-click="ng.selectedDataFilterLevel = i"
+      >
+        {{i}}
+      </div>
+    </div>
+    <div class="tabContent" ng-if="ng.selectedDataFilterLevel">
+      <div class="row bootstrap-iso">
+        <div class="row-cell row-cell-label labelTitle">{{$root.i18n('cwbackup_objecttypetodisplay')}} :</div>
+      </div>
+      <div class="rowFlex bootstrap-iso">
+        <div class="row-cell row-cell-value row-cell-max-width">
+          <div class="cell-content-wrapper filter-wrapper propertieslist">
+            <div class="choiceBox" ng-repeat="o in OTs | orderBy:'name'">
+              <a
+                class="btn-add-filter btn page-action"
+                ng-class="ng.config.levelFilter[ng.selectedDataFilterLevel].hasOwnProperty(o.scriptName) ? ['selected'] : []"
+                ng-click="updateFilterDataConfig(ng.selectedDataFilterLevel,o.scriptName)"
+                >{{o.name}} ({{o.scriptName}})</a
+              >
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="row bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('cwbackup_associationtoexclude')}} :</div>
-  </div>
-  <div class="row bootstrap-iso">
-    <div class="row-cell row-cell-value row-cell-max-width">
-      <div class="cell-content-wrapper filter-wrapper propertieslist">
-        <div class="choiceBox" ng-repeat="a in associationTargetOT">
-          <a
-            class="btn-add-filter btn page-action"
-            ng-class="ng.config[otSelected].associationScriptNameToExclude.indexOf(a.scriptname) !== -1? ['selected'] : []"
-            ng-click="toggleArray(ng.config[otSelected].associationScriptNameToExclude,a.scriptname)"
-            >{{a.name}}</a
-          >
-        </div>
-      </div>
+  <div class="tabContent" ng-if="selectedDataDisplay == true && !(ng.config.level > 0 && ng.config.method == 1)">
+    <div class="row bootstrap-iso">
+      <div class="row-cell row-cell-label labelTitle">{{$root.i18n('cwbackup_please_select_level_method1')}} :</div>
     </div>
   </div>
+
   <div ng-include src="'../../common/html/coffee/configurationJson.ng.html'"></div>
 </div>
