--- a/ngDirectives/niceList/niceList.ng.html
+++ b/ngDirectives/niceList/niceList.ng.html
@@ -11,7 +11,7 @@
         <div
           ng-if="splitProp && splitProp!=''"
           ng-style="{'background-color':color[sectionIndex]['background-color'],'color':color[sectionIndex]['color']}"
-          class="tag"
+          class="tagsProp"
           ng-repeat="splitProp in processValue.split('|')"
         >
           {{splitProp}}
@@ -20,7 +20,7 @@
       <div ng-repeat="asso in associations" ng-init="sectionIndex = $index">
         <div
           ng-style="{'background-color':color[sectionIndex]['background-color'],'color':color[sectionIndex]['color']}"
-          class="tag"
+          class="tagsAsso"
           ng-repeat="item in asso"
         >
           {{item.name}}
