Fix issue with association

--- a/angularHTMLayout/cwLayoutBackup/associationProperties.ng.html
+++ b/angularHTMLayout/cwLayoutBackup/associationProperties.ng.html
@@ -23,10 +23,10 @@
         <th class="assoPropertyGroup" colspan="2">Properties</th>
       </tr>
 
-      <tr ng-repeat="(pLabel,property) in ng.backup[OT][vv.id].Associations[assoName][ao['Associated Object ID']].Properties">
+      <tr ng-repeat="pLabel in keys(ng.backup[OT][vv.id].Associations[assoName][ao['Associated Object ID']].Properties)| orderBy: pLabel">
         <th>{{pLabel}}</th>
         <td
-          ng-class="getAssociationPropertyValue(ng.backup[OT][vv.id].Associations[assoName][ao['Associated Object ID']],pLabel,property)!= getAssociationPropertyValue(ao,pLabel,ao.Properties[pLabel]) ? 'different' : 'same'"
+          ng-class="getAssociationPropertyValue(ng.backup[OT][vv.id].Associations[assoName][ao['Associated Object ID']],pLabel,ng.backup[OT][vv.id].Associations[assoName][ao['Associated Object ID']].Properties[pLabel])!= getAssociationPropertyValue(ao,pLabel,ao.Properties[pLabel]) ? 'different' : 'same'"
         >
           <span ng-bind-html="getAssociationPropertyValue(ao,pLabel,ao.Properties[pLabel])"> </span>
         </td>
@@ -34,11 +34,10 @@
 
       <tr
         ng-if="!ng.backup[OT][vv.id].Associations[assoName][ao['Associated Object ID']].Properties[pLabel]"
-        ng-repeat="(pLabel,property) in ao.Properties"
-      >
+        ng-repeat="pLabel in  keys(ao.Properties) | orderBy: pLabel">
         <th>{{pLabel}}</th>
         <td class="different">
-          <span ng-bind-html="getAssociationPropertyValue(ao,pLabel,property)"> </span>
+          <span ng-bind-html="getAssociationPropertyValue(ao,pLabel,ao.Properties[pLabel])"> </span>
         </td>
       </tr>
     </tbody>
