fix display issue with association prop add

--- a/angularHTMLayout/cwLayoutBackup/compareTable.ng.html
+++ b/angularHTMLayout/cwLayoutBackup/compareTable.ng.html
@@ -98,8 +98,8 @@
             src="'../../common/html/cwLayoutBackup/associationProperties_plus.ng.html'"
           ></li>
 
-          <i ng-if="!hasKeys(!ao.Properties)" class="fa fa-plus associationIcon" aria-hidden="true"></i>
-          <span ng-if="!hasKeys(!ao.Properties)" ng-bind-html="getCDSForAssociatedObjects(ng.current,ao)"></span>
+          <i ng-if="!hasKeys(ao.Properties)" class="fa fa-plus associationIcon" aria-hidden="true"></i>
+          <span ng-if="!hasKeys(ao.Properties)" ng-bind-html="getCDSForAssociatedObjects(ng.current,ao)"></span>
         </div>
 
         <div
