--- a/angularHTMLayout/cwLayoutBackup/associationProperties_backup.ng.html
+++ b/angularHTMLayout/cwLayoutBackup/associationProperties_backup.ng.html
@@ -13,35 +13,25 @@
       <tr>
         <th class="assoPropertyGroup" colspan="2">Properties</th>
       </tr>
-      <tr ng-if="pLabel !='Description'" ng-repeat="pLabel in keys(ao.Properties) | orderBy: pLabel">
+      <tr ng-if="pLabel !='Description'" ng-repeat="pLabel in mergeUniqAndSort(keys(ao.Properties),keys(getAssociationOfCurrent(OT, vv, assoName, ao)))">
         <th>{{pLabel}}</th>
 
-        <td class="same">
+        <td ng-if="ao.Properties[pLabel] !== undefined" class="same">
           <span ng-bind-html="getAssociationPropertyValue(ao,pLabel,ao.Properties[pLabel])"> </span>
         </td>
-      </tr>
-
-      <tr>
-        <th>Description</th>
-
-        <td class="same">
-          <span ng-bind-html="getAssociationPropertyValue(ao,'Description',ao.Properties['Description'])"> </span>
+        <td ng-if="ao.Properties[pLabel] === undefined" class="different">
+          <span ng-bind-html="getAssociationPropertyValue(ao,pLabel)"> </span>
         </td>
       </tr>
 
       <tr
-        ng-if="ao.Properties[pLabel] === undefined && pLabel !='Description'"
-        ng-repeat="pLabel in keys(getAssociationOfCurrent(OT, vv, assoName, ao)) | orderBy: pLabel"
       >
-        <th>{{pLabel}}</th>
-        <td>
-          <span ng-bind-html="getAssociationPropertyValue(ao,pLabel)"> </span>
-        </td>
-      </tr>
-      <tr>
         <th>Description</th>
-        <td>
+        <td ng-if="ao.Properties['Description'] === undefined" class="different">
           <span ng-bind-html="getAssociationPropertyValue(ao,'Description')"> </span>
+        </td>
+        <td ng-if="ao.Properties['Description'] !== undefined" class="same">
+          <span ng-bind-html="getAssociationPropertyValue(ao,'Description',ao.Properties['Description'])"> </span>
         </td>
       </tr>
     </tbody>
